hard-gists/5606474/run.log
=== Docker Run Log for 5606474 ===
Started at: Mi 29. Okt 15:46:37 CET 2025

[2025-10-29 15:46:38] START: Running container for 5606474
[2025-10-29 15:46:38] SUCCESS: Container 46f15b141c520ca6e9b83df43bec4f5d7e0e544f66cd7d9100da9ed43273dd73 started for 5606474
=== Container logs for 5606474 ===
  File "/snippet.py", line 98
    print decrypt_password(args[0])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5606474 ===
[2025-10-29 15:46:40] INFO: Container 46f15b141c520ca6e9b83df43bec4f5d7e0e544f66cd7d9100da9ed43273dd73 has stopped
